dist/LineScript-win64-20260616/tests/cases/compile_fail/ptr_inner_type_not_supported.lsc
main() -> i64 do
  declare p: ptr<weird_t> = mem_alloc(8)
  println(p)
  return 0
end
